--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -10,6 +10,37 @@ button:hover {
     opacity: .8;
 }
 
+@media screen and (max-width: 768px) {
+    .navigation__list {
+        display: flex;
+        justify-content: flex-end
+    }
+}
+
+.navigation__list_disabled {
+    display: none;
+    width: 0;
+}
+
+.navigation__auth {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+.navigation__menu {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+@media screen and (max-width: 768px) {
+    .navigation__menu {
+        display: none;
+        width: 0;
+    }
+}
+
 .navigation__account-button {
     font-weight: 500;
     font-size: 14px;
@@ -34,6 +65,14 @@ button:hover {
     margin-right: 30px;
 }
 
+@media screen and (max-width: 650px) {
+    .navigation__link {
+        font-size: 10px;
+        line-height: 1.6;
+        margin-right: 14px;
+    }
+}
+
 .navigation__button {
     color: #fff;
     font-weight: 500;
@@ -45,3 +84,150 @@ button:hover {
     padding: 8px 20px;
     cursor: pointer;
 }
+
+@media screen and (max-width: 650px) {
+    .navigation__button {
+        font-size: 10px;
+        line-height: 1.6;
+        padding: 5px 12px;
+    }
+}
+
+.navigation__navbar-button {
+    display: none;
+}
+
+@media screen and (max-width: 768px) {
+    .navigation__navbar-button {
+        display: block;
+        background-image: url('../../images/mune-icon.svg');
+        width: 40px;
+        height: 43px;
+        padding: 0;
+        background-color: transparent;
+        border: 0;
+    }
+}
+
+.navigation__navbar {
+    /* transform: translateX(550px);
+    transition: transform .3s; */
+    opacity: 0;
+    z-index: 20;
+    position: fixed;
+    visibility: hidden;
+    transition: opacity .3s, visibility .3s;
+}
+
+@media screen and (max-width: 768px) {
+    .navigation__navbar_enable {
+        opacity: 1;
+        visibility: visible;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .navigation__overlay {
+        position: fixed;
+        height: 100vh;
+        width: 100vw;
+        background-color: #000;
+        opacity: .3;
+        top: 0;
+        left: 0;
+        z-index: 11;
+        /* transition: opacity .3s; */
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .navigation__navbar_menu {
+        position: fixed;
+        width: 476px;
+        height: 100vh;
+        padding: 22px;
+        background-color: #fff;
+        z-index: 12;
+        top: 0;
+        right: 0;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        transform: translateX(520px);
+        transition: transform .4s;
+        overflow-y: scroll;
+    }
+}
+
+@media screen and (max-width: 530px) {
+    .navigation__navbar_menu {
+        padding: 14px;
+        width: 100vw;
+        transform: translateX(100vw);
+        box-sizing: border-box;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .navigation__navbar_menu_visible {
+        transform: translateX(0px);
+    }
+}
+
+.navigation__container-icon {
+    margin-bottom: 109px;
+    width: 30px;
+    height: 30px;
+    align-self: end;
+}
+
+@media screen and (max-width: 530px) {
+    .navigation__container-icon {
+        margin-bottom: 100px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .navigation__close-icon {
+        width: 100%;
+    }
+}
+
+@media screen and (max-width: 530px) {
+    .navigation__close-icon {
+        width: 100%;
+        height: 100%;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .navigation__little-nav {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        row-gap: 24px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .navigation__menu-link {
+        text-decoration: none;
+        color: #000;
+        font-size: 18px;
+        font-weight: 500;
+        line-height: normal;
+        padding-bottom: 4px;
+    }
+}
+
+
+ .navigation__menu-link_border {
+     border-bottom: 1px solid #000;
+ }
+
+.navigation__menu-account {
+    margin-top: 570px;
+}
+
+
+
