--- a/src/components/Promo/Promo.css
+++ b/src/components/Promo/Promo.css
@@ -4,6 +4,20 @@
     display: flex;
     flex-direction: column;
     align-items: flex-end;
+    overflow: hidden;
+}
+
+@media screen and (max-width: 768px) {
+    .main__promo {
+        padding: 0 44px 70px 44px;
+        align-items: center;
+    }
+}
+
+@media screen and (max-width: 650px) {
+    .main__promo {
+        padding: 0 10px 40px 10px;
+    }
 }
 
 .main__header {
@@ -12,10 +26,40 @@
     font-weight: 400;
     line-height: 1.3;
     max-width: 600px;
-    margin-bottom: 100px;
+    margin-bottom: 102px;
     align-self: flex-start;
+    letter-spacing: -1.6px;
+}
+
+@media screen and (max-width: 855px) {
+    .main__header {
+        align-self: center;
+        text-align: center;
+        margin-bottom: 140px;
+    }
+}
+
+@media screen and (max-width: 650px) {
+    .main__header {
+        font-size: 31px;
+        line-height: 1.25;
+        max-width: 300;
+        letter-spacing: -1.24px;
+    }
+}
+
+@media screen and (max-width: 650px) {
+    .main__header {
+        margin-bottom: 60px;
+    }   
 }
 
 .main__promo-image {
     max-width: 722px;
+} 
+
+@media screen and (max-width: 855px) {
+    .main__promo-image {
+        max-width: 680px;
+    }
 }
