added movies, saved-movies, 404 (with mediascreen), buttons animation

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -17,3 +17,11 @@ body {
 @import url('../Register/Register.css');
 @import url('../AuthForm/AuthForm.css');
 @import url('../Profile/Profile.css');
+@import url('../Movies/Movies.css');
+@import url('../SavedMovies/SavedMovies.css');
+@import url('../SearchForm/SearchForm.css');
+@import url('../Preloader/Preloader.css');
+@import url('../MoviesCardList/MoviesCardList.css');
+@import url('../MoviesCard/MoviesCard.css');
+@import url('../FilterCheckbox/FilterCheckbox.css');
+@import url('../NotFound/NotFound.css');
