--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -58,7 +58,8 @@
     margin-bottom: 17px;
     padding-bottom: 16px;
     border-bottom: 1px solid #E8E8E8;
-    display: flex;
+    display: grid;
+    grid-template-columns: 141px 269px;
 }
 
 .profile__element:last-of-type {
@@ -67,24 +68,36 @@
     border: 0;
 }
 
+
 .profile__input {
     position: relative;
-    padding: 0;
+    padding: 5px 0;
     width: 100%;
     border: 0;
     text-align: right;
     font-size: 11px;
     font-weight: 400;
     line-height: normal;
+    background: #fff;
+    transition: background .3s;
 }
 
 .profile__input:focus {
+    outline: none;                               
+}
+
+.profile__input_focus_disable {
+    cursor: auto;
+}
+
+.profile__input_focus_disable:focus {
     outline: none;
+    border: none;
 }
 
 .profile__label {
-    position: absolute;
-    z-index: 2;
+    /* position: absolute; */
+    /* z-index: 2; */
     font-size: 11px;
     font-weight: 500;
     line-height: normal;
