--- a/src/components/Promo/Promo.css
+++ b/src/components/Promo/Promo.css
@@ -4,23 +4,22 @@
     display: flex;
     flex-direction: column;
     align-items: flex-end;
-    overflow: hidden;
 }
 
 @media screen and (max-width: 768px) {
     .main__promo {
-        padding: 0 44px 70px 44px;
+        padding: 281px 44px 70px 44px;
         align-items: center;
     }
 }
 
 @media screen and (max-width: 650px) {
     .main__promo {
-        padding: 0 10px 40px 10px;
+        padding: 184px 10px 40px 10px;
     }
 }
 
-.main__header {
+.promo__header {
     margin: 0;
     font-size: 40px;
     font-weight: 400;
@@ -32,7 +31,7 @@
 }
 
 @media screen and (max-width: 855px) {
-    .main__header {
+    .promo__header {
         align-self: center;
         text-align: center;
         margin-bottom: 140px;
@@ -40,26 +39,41 @@
 }
 
 @media screen and (max-width: 650px) {
-    .main__header {
+    .promo__header {
         font-size: 31px;
         line-height: 1.25;
-        max-width: 300;
+        max-width: 300px;
         letter-spacing: -1.24px;
     }
 }
 
 @media screen and (max-width: 650px) {
-    .main__header {
+    .promo__header {
         margin-bottom: 60px;
     }   
 }
 
-.main__promo-image {
+.promo__image-container {
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+}
+
+@media screen and (max-width: 768px) {
+    .promo__image-container {
+        width: 100vw;
+        height: 230px;
+        justify-content: center;
+        overflow-x: hidden;
+    }
+}
+
+.promo__promo-image {
     max-width: 722px;
 } 
 
 @media screen and (max-width: 855px) {
-    .main__promo-image {
+    .promo__promo-image {
         max-width: 680px;
     }
 }
