--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -16,25 +16,39 @@
     }
 }
 
+.search__form {
+    width: 100%;
+}
+
 .search__container {
     display: flex;
     align-items: center;
+    border-radius: 50px;
+    background-color: #F9F9F9;
+    outline: 1px solid transparent;
+    transition: outline .3s;
 }
 
 .search__input {
     width: 100%;
-    position: relative;
     padding: 14px 0 14px 22px;
-    border: 1px solid transparent;
-    border-radius: 50px;
-    background-color: #F9F9F9;
+    background-color: transparent;
     font-size: 13px;
     font-weight: 400;
     line-height: 1.3;
-    outline: none;
     box-sizing: border-box;
-    transition: border .3s linear;
+    border: none;
 }
+
+.search__container:focus-within {
+    outline: 1px solid #000;
+
+    .search__input {
+        outline: none;
+        border: none;
+    }
+}
+
 
 @media screen and (max-width: 425px) {
     .search__input {
@@ -42,12 +56,12 @@
         font-weight: 400;
         line-height: 1.54;
         padding-left: 19px;
+        outline: transparent;
     }
 }
 
 .search__input:focus {
-    outline: none;
-    border: 1px solid #000;
+    outline: inherit;
 }
 
 .search__icon-conteiner {
@@ -56,8 +70,7 @@
     border: 0;
     background-color: transparent;
     padding: 0;
-    position: absolute;
-    right: 76px;
+    margin-right: 4px;
 }
 
 @media screen and (max-width: 768px) {
