--- a/src/components/AuthForm/AuthForm.css
+++ b/src/components/AuthForm/AuthForm.css
@@ -22,22 +22,12 @@
     display: flex;
     flex-direction: column;
     row-gap: 5px;
-    margin-bottom: 19px;
+    margin-bottom: 7px;
 }
 
 .form__element:last-of-type {
     margin: 0
 }
-
-/*@media screen and (max-width: 530px) {
-    .form__element:last-of-type {
-        margin-bottom: 222px;
-    }
-}
-
-.form__element_margin_bottom {
-    margin-bottom: 221px;
-} */
 
 .form__headline {
     color: #A0A0A0;
@@ -57,11 +47,6 @@
     line-height: normal;
 }
 
-.form__input_error {
-    color: #FF4062;
-    border-bottom: 1px solid #FF4062;
-}
-
 .form__input:focus {
     outline: none;
     color: #000;
@@ -69,11 +54,23 @@
     font-family: 'Inter', sans-serif;
 }
 
+.form__input_error {
+    color: #FF4062;
+    border-bottom: 1px solid #FF4062;
+    transition: border-bottom .3s linear, color .3s linear;
+}
+
+.form__input_error:focus {
+    color: #FF4062;
+    border-bottom: 1px solid #FF4062;
+}
+
 .form__error {
     color: #FF4062;
     font-size: 10px;
     font-weight: 400;
     line-height: normal;
+    height: 12px;
 }
 
 .form__submit {
