bugfix: макет Profile, макет Techs, валидация

--- a/src/components/NotFound/NotFound.css
+++ b/src/components/NotFound/NotFound.css
@@ -1,5 +1,10 @@
 .error {
     display: flex;
+    justify-content: center;
+}
+
+.error__container {
+    display: flex;
     flex-direction: column;
     align-items: center;
 }
