--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -18,7 +18,7 @@
 }
 
 .profile__container {
-    width: 410px;
+    width: 414px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -26,7 +26,7 @@
 
 @media screen and (max-width: 530px) {
     .profile__container {
-        width: 260px;
+        width: 266px;
     }
 }
 
@@ -38,56 +38,75 @@
 }
 
 .profile__form {
-    margin-top: 123px;
+    margin-top: 119px;
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    row-gap: 10px;
 }
 
 @media screen and (max-width: 768px) {
     .profile__form {
-        margin-top: 97px;
+        margin-top: 90px;
     }
 }
 
 @media screen and (max-width: 530px) {
     .profile__form {
-        margin-top: 80px;
+        margin-top: 75px;
     }
 }
 
 .profile__element {
-    margin-bottom: 17px;
-    padding-bottom: 16px;
-    border-bottom: 1px solid #E8E8E8;
     display: grid;
     grid-template-columns: 141px 269px;
+    align-items: center;
+    border: 1px solid transparent;
+    border-radius: 5px;
+    transition: border .3s;
+    width: 100%;
+    padding: 0 2px;
+}
+
+@media screen and (max-width: 530px) {
+    .profile__element {
+        grid-template-columns: 130px 120px;
+        column-gap: 10px;
+    }
 }
 
 .profile__element:last-of-type {
     margin: 0;
-    padding: 0;
-    border: 0;
 }
 
+.profile__element:focus-within {
+    border: 1px solid #000;
+}
+
+.profile__border {
+    border-bottom: 1px solid #E8E8E8;
+}
 
 .profile__input {
     position: relative;
     padding: 5px 0;
     width: 100%;
     border: 0;
+    box-sizing: border-box;
     text-align: right;
     font-size: 11px;
     font-weight: 400;
     line-height: normal;
-    background: #fff;
-    transition: background .3s;
+    background: transparent;
 }
 
 .profile__input:focus {
-    outline: none;                               
+    outline: none;                            
 }
 
 .profile__input_focus_disable {
     cursor: auto;
+    color: #000;
 }
 
 .profile__input_focus_disable:focus {
@@ -96,8 +115,6 @@
 }
 
 .profile__label {
-    /* position: absolute; */
-    /* z-index: 2; */
     font-size: 11px;
     font-weight: 500;
     line-height: normal;
@@ -108,7 +125,7 @@
 }
 
 .profile__links {
-    margin-top: 220px;
+    margin-top: 214px;
     width: 410px;
     display: flex;
     flex-direction: column;
@@ -119,13 +136,13 @@
 
 @media screen and (max-width: 768px) {
     .profile__links {
-        margin-top: 209px;
+        margin-top: 205px;
     }
 }
 
 @media screen and (max-width: 530px) {
     .profile__links {
-        margin-top: 379px;
+        margin-top: 374px;
         width: 260px;
     }
 }
