--- a/src/components/AuthForm/AuthForm.css
+++ b/src/components/AuthForm/AuthForm.css
@@ -1,5 +1,10 @@
 .form {
     display: flex;
+    justify-content: center;
+}
+
+.form__container {
+    display: flex;
     flex-direction: column;
     align-items: center;
 }
