--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -5,8 +5,26 @@
     
 }
 
+.card__image-container {
+    width: 100%;
+    height: 203px;
+}
+
+@media screen and (max-width: 1160) {
+    .card__image-container {
+        height: 190px;
+    }
+}
+
+@media screen and (max-width: 720px) {
+    .card__image-container {
+        height: 168px;
+    }
+}
+
 .card__image {
     width: 100%;
+    height: 100%;
     border-radius: 5px 5px 0 0;
 }
 
