--- a/src/components/MoviesCardList/MoviesCardList.css
+++ b/src/components/MoviesCardList/MoviesCardList.css
@@ -22,6 +22,10 @@
     margin: 0;
 }
 
+.list__container_disable {
+    display: none;
+}
+
 @media screen and (max-width: 1160px) {
     .list__container {
         grid-template-columns: repeat(2, 339px);
@@ -71,4 +75,14 @@
 .list__button_disable:hover {
     opacity: 0;
     overflow: hidden;
+}
+
+.list__result {
+    grid-column-start: 1;
+    grid-column-end: 4;
+    margin: 0;
+    font-size: 30px;
+    color: #A0A0A0;
+    display: flex;
+    justify-content: center;
 }
