bugfix: search, update profile, route signin&signup, added popup

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -25,3 +25,4 @@ body {
 @import url('../MoviesCard/MoviesCard.css');
 @import url('../FilterCheckbox/FilterCheckbox.css');
 @import url('../NotFound/NotFound.css');
+@import url('../SuccessPopup/SuccessPopup.css');
